Fix logging, convert all to log4j, more code cleanup